# swagger/v1/swagger.yaml
@@ -45,6 +45,40 @@ paths:
                   required:
                   - email
                   - password
+  "/sessions/refresh":
+    post:
+      summary: Refreshes a session token
+      tags:
+      - Sessions
+      parameters: []
+      responses:
+        '200':
+          description: session refreshed
+          content:
+            application/json:
+              examples:
+                example_0:
+                  value:
+                    token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxfQ.z7qJczsfi1j8zrFPlwBGLX5v3Hac4
+        '400':
+          description: bad request
+          content:
+            application/json:
+              examples:
+                example_0:
+                  value:
+                    error: Bad request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                refresh_token:
+                  type: string
+                  example: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxfQ.z7qJczsfi1j8zrFPlwBGLX5v3Hac4
+              required:
+              - refresh_token
   "/users":
     post:
       summary: Creates a user
